--- a/app/views/application/_layerbegin.html.erb
+++ b/app/views/application/_layerbegin.html.erb
@@ -120,6 +120,18 @@
                 活动标签颜色
               </a>
             </li>
+            <li data-turbolinks="false">
+              <a href=<%= explains_path %>>
+                <i class="icon-double-angle-right"></i>
+                产品说明
+              </a>
+            </li>
+            <li data-turbolinks="false">
+              <a href=<%= freeposts_path %>>
+                <i class="icon-double-angle-right"></i>
+                免邮说明
+              </a>
+            </li>
           </ul>
         </li>
 
@@ -167,7 +179,7 @@
             <li data-turbolinks="false">
               <a href=<%= firstbuyactives_path %>>
                 <i class="icon-double-angle-right"></i>
-                首次购买
+                买满返
               </a>
             </li>
             <li data-turbolinks="false">
