--- a/app/views/firstbuyactivedetails/_form.html.erb
+++ b/app/views/firstbuyactivedetails/_form.html.erb
@@ -55,7 +55,7 @@
 
 <%= form_with(model:[@firstbuyactive,@firstbuyactivedetail],local:true,:html => {:class=>'form-horizontal m-t',:multipart => true}) do |f| %>
   <h3 class="header smaller lighter blue">
-    二级分润
+    买满返
     <small></small>
   </h3>
   <div class="form-group">
