--- a/app/views/firstbuyactives/index.html.erb
+++ b/app/views/firstbuyactives/index.html.erb
@@ -3,7 +3,7 @@
 <div class="page-content">
   <div class="page-header">
     <h1>
-      首次购买
+      买满返
     </h1>
   </div><!-- /.page-header -->
 
