--- a/app/views/buyfullactives/_form.html.erb
+++ b/app/views/buyfullactives/_form.html.erb
@@ -93,6 +93,29 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 前端显示描述 </label>
+    <div class="col-sm-10">
+      <div class="col-xs-3">
+        <label>
+          <%= f.check_box :showlable,class:"ace ace-switch" %>
+          <span class="lbl"></span>
+        </label>
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 前端描述 </label>
+    <div class="col-sm-10">
+      <%= f.text_area :summary,class:"col-xs-10 col-sm-8",row:'2' %>
+    </div>
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1">  </label>
+    <div class="col-sm-10">
+      <span class="text-muted">关键字替换规则：{productname}产品名称，{productunit}产品单位，{productnumber}产品数量，{givename}赠送产品名称，{giveunit}赠送产品单位，{givenumber}赠送产品数量</span>
+    </div>
+  </div>
+
 
 
   <div class="clearfix form-actions">
