--- a/app/views/clas/_form.html.erb
+++ b/app/views/clas/_form.html.erb
@@ -54,6 +54,26 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 关键字 </label>
+    <div class="col-sm-10">
+      <%= f.text_field :keyword,class:"col-xs-10 col-sm-8" %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 参与分类 </label>
+    <div class="col-sm-10">
+
+      <div class="col-xs-3">
+        <label>
+          <%= f.check_box :showinproduct,class:"ace ace-switch" %>
+          <span class="lbl"></span>
+        </label>
+      </div>
+
+    </div>
+  </div>
 
   <div class="clearfix form-actions">
     <div class="col-md-offset-2 col-md-10">
