--- a/app/views/firstbuyactives/_form.html.erb
+++ b/app/views/firstbuyactives/_form.html.erb
@@ -44,7 +44,7 @@
 
 <%= form_with(model:firstbuyactive,local:true,:html => {:class=>'form-horizontal m-t',:multipart => true}) do |f| %>
   <h3 class="header smaller lighter blue">
-    首次购买
+    买满返
     <small></small>
   </h3>
   <div class="form-group">
@@ -111,6 +111,29 @@
           <span class="lbl"></span>
         </label>
       </div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 前端显示描述 </label>
+    <div class="col-sm-10">
+      <div class="col-xs-3">
+        <label>
+          <%= f.check_box :showlable,class:"ace ace-switch" %>
+          <span class="lbl"></span>
+        </label>
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 前端描述 </label>
+    <div class="col-sm-10">
+      <%= f.text_area :summary,class:"col-xs-10 col-sm-8",row:'2' %>
+    </div>
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1">  </label>
+    <div class="col-sm-10">
+      <span class="text-muted">关键字替换规则：{number}数量，{unit}单位，{discount}节省费用</span>
     </div>
   </div>
 
