--- a/app/views/limitactives/_form.html.erb
+++ b/app/views/limitactives/_form.html.erb
@@ -93,6 +93,25 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 前端显示描述 </label>
+    <div class="col-sm-10">
+      <div class="col-xs-3">
+        <label>
+          <%= f.check_box :showlable,class:"ace ace-switch" %>
+          <span class="lbl"></span>
+        </label>
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 前端描述 </label>
+    <div class="col-sm-10">
+      <%= f.text_area :summary,class:"col-xs-10 col-sm-8",row:'2' %>
+    </div>
+  </div>
+
 
 
   <div class="clearfix form-actions">
