--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -84,6 +84,14 @@
       <%= f.text_field :name,class:"col-xs-10 col-sm-8" %>
     </div>
   </div>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 产品描述 </label>
+    <div class="col-sm-10">
+      <%= f.text_field :subtitle,class:"col-xs-10 col-sm-8" %>
+    </div>
+  </div>
+
   <div class="form-group">
     <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 成本 </label>
     <div class="col-sm-10">
@@ -106,6 +114,30 @@
     <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 规格 </label>
     <div class="col-sm-10">
       <%= f.text_field :spec,class:"col-xs-10 col-sm-8" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 重量 </label>
+    <div class="col-sm-10">
+      <%= f.text_field :weight,class:"col-xs-10 col-sm-8" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 品牌 </label>
+    <div class="col-sm-10">
+      <%= f.text_field :brand,class:"col-xs-10 col-sm-8" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 包装 </label>
+    <div class="col-sm-10">
+      <%= f.text_field :pack,class:"col-xs-10 col-sm-8" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 适合季节 </label>
+    <div class="col-sm-10">
+      <%= f.text_field :season,class:"col-xs-10 col-sm-8" %>
     </div>
   </div>
   <div class="form-group">
