--- a/app/views/secondactives/_form.html.erb
+++ b/app/views/secondactives/_form.html.erb
@@ -119,7 +119,19 @@
   </div>
 
   <div class="form-group">
-    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 备注 </label>
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 前端显示描述 </label>
+    <div class="col-sm-10">
+      <div class="col-xs-3">
+        <label>
+          <%= f.check_box :showlable,class:"ace ace-switch" %>
+          <span class="lbl"></span>
+        </label>
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 前端描述 </label>
     <div class="col-sm-10">
       <%= f.text_area :summary,class:"col-xs-10 col-sm-8",row:'2' %>
     </div>
