--- a/app/views/application/_layerbegin.html.erb
+++ b/app/views/application/_layerbegin.html.erb
@@ -266,6 +266,12 @@
                 代理
               </a>
             </li>
+            <li data-turbolinks="false">
+              <a href=<%= realnames_path %>>
+                <i class="icon-double-angle-right"></i>
+                实名
+              </a>
+            </li>
           </ul>
         </li>
 
