--- a/app/views/agentlevels/_form.html.erb
+++ b/app/views/agentlevels/_form.html.erb
@@ -81,8 +81,8 @@
       <div style="margin-top: -8px;padding-left: 0px;" class="checkbox">
         <label>
 
-          <%= f.check_box :grant, class:'ace'%>
-          <span class="lbl"> 参与代理核算</span>
+          <%= f.check_box :frontend, class:'ace'%>
+          <span class="lbl"> 前端显示</span>
         </label>
       </div>
 
@@ -98,6 +98,12 @@
     <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 任务额 </label>
     <div class="col-sm-10">
       <%= f.text_field :task,class:"col-xs-10 col-sm-8" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 保证金 </label>
+    <div class="col-sm-10">
+      <%= f.text_field :deposit,class:"col-xs-10 col-sm-8" %>
     </div>
   </div>
 
