--- a/app/views/configs/_form.html.erb
+++ b/app/views/configs/_form.html.erb
@@ -84,6 +84,20 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 显示已售 </label>
+    <div class="col-sm-10">
+
+      <div class="col-xs-3">
+        <label>
+          <%= f.check_box :displaysale,class:"ace ace-switch" %>
+          <span class="lbl"></span>
+        </label>
+      </div>
+
+    </div>
+  </div>
+
     <div class="clearfix form-actions">
       <div class="col-md-offset-2 col-md-10">
         <button type="submit" name="commit" value="保存" class="btn btn-info" data-disable-with="保存" id="submit">
