--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -117,7 +117,7 @@
     </div>
   </div>
   <div class="form-group">
-    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 重量 </label>
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 净含量 </label>
     <div class="col-sm-10">
       <%= f.text_field :weight,class:"col-xs-10 col-sm-8" %>
     </div>
@@ -129,15 +129,9 @@
     </div>
   </div>
   <div class="form-group">
-    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 包装 </label>
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 保质期 </label>
     <div class="col-sm-10">
-      <%= f.text_field :pack,class:"col-xs-10 col-sm-8" %>
-    </div>
-  </div>
-  <div class="form-group">
-    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 适合季节 </label>
-    <div class="col-sm-10">
-      <%= f.text_field :season,class:"col-xs-10 col-sm-8" %>
+      <%= f.text_field :shelflife,class:"col-xs-10 col-sm-8" %>
     </div>
   </div>
   <div class="form-group">
@@ -147,6 +141,19 @@
       <div class="col-xs-3">
         <label>
           <%= f.check_box :grounding,class:"ace ace-switch" %>
+          <span class="lbl"></span>
+        </label>
+      </div>
+
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 试用装 </label>
+    <div class="col-sm-10">
+
+      <div class="col-xs-3">
+        <label>
+          <%= f.check_box :trial,class:"ace ace-switch" %>
           <span class="lbl"></span>
         </label>
       </div>
