--- a/app/views/limitactivedetails/_form.html.erb
+++ b/app/views/limitactivedetails/_form.html.erb
@@ -157,6 +157,16 @@
   </div>
 
   <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 活动折扣 </label>
+    <div class="col-sm-10">
+      <%= f.text_field :discount, class:'col-xs-10 col-sm-8', id:'price' %>
+    </div>
+    <div class="col-sm-10">
+      <span class="grey" style="margin-left: 10px;">1 无折扣</span>
+    </div>
+  </div>
+
+  <div class="form-group">
     <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 最小购买数量 </label>
     <div class="col-sm-10">
       <%= f.text_field :minnumber, class:'col-xs-10 col-sm-8' %>
