--- a/app/views/limitactives/_form.html.erb
+++ b/app/views/limitactives/_form.html.erb
@@ -94,7 +94,7 @@
   </div>
 
   <div class="form-group">
-    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 前端显示描述 </label>
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 显示活动标签 </label>
     <div class="col-sm-10">
       <div class="col-xs-3">
         <label>
