--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -42,6 +42,18 @@
       </div>
     </div>
   <div class="form-group">
+    <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 接收新订单消息 </label>
+    <div class="col-sm-10">
+      <div style="margin-top: -8px;padding-left: 0px;" class="checkbox">
+        <label>
+
+          <%= f.check_box :receiveneworder, class:'ace'%>
+          <span class="lbl"> 前端显示</span>
+        </label>
+      </div>
+    </div>
+  </div>
+  <div class="form-group">
     <label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 备注 </label>
     <div class="col-sm-10">
       <%= f.text_area :summary,class:"col-xs-10 col-sm-8",row:'2' %>
