--- a/app/views/application/_layerbegin.html.erb
+++ b/app/views/application/_layerbegin.html.erb
@@ -194,7 +194,7 @@
         </ul>
       </li>
 
-        <% if url.include?('secondactives') || url.include?('firstbuyactives') || url.include?('limitactives') || url.include?('buyfullactives') || url.include?('addmoneyactives')%>
+        <% if url.include?('secondactives') || url.include?('firstbuyactives') || url.include?('limitactives') || url.include?('buyfullactives') || url.include?('addmoneyactives') || url.include?('multibuyfulls')%>
           <li class="active">
         <% else %>
           <li>
@@ -233,6 +233,12 @@
               <a href=<%= addmoneyactives_path %>>
                 <i class="icon-double-angle-right"></i>
                 加钱换购
+              </a>
+            </li>
+            <li data-turbolinks="false" <%= url.include?('multibuyfulls') ? 'class=active' : '' %>>
+              <a href=<%= multibuyfulls_path %>>
+                <i class="icon-double-angle-right"></i>
+                买满送多商品
               </a>
             </li>
           </ul>
