--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,30 +1,30 @@
 <script>
-    var request = $.ajax({
-        url: 'http://yjmh.dh.cx/',
-        type: 'POST',
-        dataType: 'json',
-        // data: $('#home_query').serialize(),
-        data: {
-            action: 'home_query',
-            query_str: '陈薇茗',
-        }
-    });
-
-    request.done(function(ret) {
-
-        if (ret.count < 1) {
-            $('#query_message').text(ret.message).removeClass('hidden');
-        } else if (ret.count == 1) {
-            window.location.href = ret.data[0];
-        } else {
-            $('#query_select').empty().removeClass('hidden');
-            for (a = 0; a < ret.data.length; a++) {
-                var text = ret.data[a].text;
-                var url = ret.data[a].url;
-                $('#query_select').append('<a href="' + url + '" class="input selection">' + text + '</a>');
-            }
-        }
-    });
+    // var request = $.ajax({
+    //     url: 'http://yjmh.dh.cx/',
+    //     type: 'POST',
+    //     dataType: 'json',
+    //     // data: $('#home_query').serialize(),
+    //     data: {
+    //         action: 'home_query',
+    //         query_str: '陈薇茗',
+    //     }
+    // });
+    //
+    // request.done(function(ret) {
+    //
+    //     if (ret.count < 1) {
+    //         $('#query_message').text(ret.message).removeClass('hidden');
+    //     } else if (ret.count == 1) {
+    //         window.location.href = ret.data[0];
+    //     } else {
+    //         $('#query_select').empty().removeClass('hidden');
+    //         for (a = 0; a < ret.data.length; a++) {
+    //             var text = ret.data[a].text;
+    //             var url = ret.data[a].url;
+    //             $('#query_select').append('<a href="' + url + '" class="input selection">' + text + '</a>');
+    //         }
+    //     }
+    // });
 </script>
 <p id="notice"><%= notice %></p>
 
